--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
 
   <section class="extras">
     <h2>Extras</h2>
-    <pre>
+    <p>
       - Todas nuestras salsas como: cheddar, emmy, bacon jam,mermeladada de pimiento,
        bigcora, milislas y muchas mas, tienen un suplemento de +1€.
       Consultanos por las nuevas salsas que vamos incluyendo.
-    </pre>
-    <pre>
-      ¿Lo quieres sin gluten?
-
+    </p>
+    <p>¿Lo quieres sin gluten?</p>
+    <p>
       Todos nuestros camperos y burgers pueden ser sin gluten, por 1€ más.
-    </pre>
+    </p>
   </section>
 
     <section id="carta" class="menu-section ">
@@ -64,88 +63,155 @@
         <h3>Entrantes</h3>
         <ul>
           <li><span class="item-name">Patatas Clásicas: </span><span class="item-price">3.50€</span></li>
+          <p>Kétchup y mayo Yeski</p>
           <li><span class="item-name">Patatas Bravas</span><span class="item-price">4.00€</span></li>
+          <p> </p>
           <li><span class="item-name">Patatas Multisalsa</span><span class="item-price">5.50€</span></li>
+          <p>Patatas Dip con combo variado en salsas</p>
           <li><span class="item-name">Patatas Cheesebacon</span><span class="item-price">7.50€</span></li>
+          <p>Patatas fritas gratinadas, bacon y salsa cheddar</p>
           <li><span class="item-name">Patatas Porky</span><span class="item-price">7.00€</span></li>
+          <p>Patatas fritas gratinadas, cerdo desilachado, salsa cheddar y barbacoa</p>
           <li><span class="item-name">Patatas Cora 🌶️</span><span class="item-price">6.50€</span></li>
+          <p>Patatas fritas, mermelada de bacon y salsa Emy</p>
           <li><span class="item-name">Patatas Shawarma</span><span class="item-price">6.50€</span></li>
+          <p>Patatas fritas gratinadas, carne kebab, salsa yogur y un toque picante</p>
           <li><span class="item-name">Patatas Rancheras</span><span class="item-price">7.00€</span></li>
+          <p>Patatas fritas gratinadas, carne picada, salsa cheddar y salsa ranchera</p>
           <li><span class="item-name">Patatas 4 Quesos</span><span class="item-price">6.50€</span></li>
+          <p> </p>
           <li><span class="item-name">Pollo Sureño</span><span class="item-price">6.00€</span></li>
+          <p> </p>
           <li><span class="item-name">Nuggets</span><span class="item-price">4.50€</span></li>
+          <p> </p>
           <li><span class="item-name">Alitas</span><span class="item-price">6.00€</span></li>
+          <p> </p>
         </ul>
       </div> <!-- CAMPEROS -->
       <div class="menu-category">
         <h3>Camperos</h3>
         <ul>
           <li><span class="item-name">Clásico</span><span class="item-price">5.50€</span></li>
+          <p>Jamón york o bacon, queso, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Pollino</span><span class="item-price">6.00€</span></li>
+          <p>Pollo, queso, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Pollino con huevo</span><span class="item-price">6.50€</span></li>
+          <p>Pollo, huevo, queso, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Alberana</span><span class="item-price">7.00€</span></li>
+          <p>Pollo, huevo, queso, bacon, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Pinchito</span><span class="item-price">6.50€</span></li>
+          <p>Pinchito de pollo con aliño casero, queso, lechuga, tomate y mayo Yeski</p>
           <li><span class="item-name">Shawarma</span><span class="item-price">6.50€</span></li>
+          <p>Carne de pollo, queso, lechuga, tomate, salsa blanca y un toque picante</p>
           <li><span class="item-name">Roque</span><span class="item-price">6.50€</span></li>
+          <p>Pollo, queso roquefort, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Veggy</span><span class="item-price">6.50€</span></li>
+          <p>2 huevos y pimientos fritos, queso, lechuga, tomate, cebolal caramelizada y mayo Yeski</p>
           <li><span class="item-name">Veggy Roque</span><span class="item-price">6.50€</span></li>
+          <p>Tortilla, queso roquefort, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Cabramelizado</span><span class="item-price">6.50€</span></li>
+          <p>Jamón York, queco de cabra, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Pollo Cabramelizado</span><span class="item-price">7.00€</span></li>
-          <li><span class="item-name">Súper Gonzi</span><span class="item-price">7.50€</span></li>
+          <p>Pollo, queso de cabra, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
+          <li><span class="item-name">Súper Gonzi</span><span class="item-price">7.50€</xspan></li>
+          <p>2 burguers, queso, huevo, bacon, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
           <li><span class="item-name">Súper Picante</span><span class="item-price">7.50€</span></li>
+          <p>2 crestas, huevos, queso, bacon, lechuga, tomate y mayo Yeski</p>
           <li><span class="item-name">Moruno</span><span class="item-price">6.00€</span></li>
+          <p>Pollo con aliño casero, queso, lechuga, tomate y mayo Yeski</p>
           <li><span class="item-name">Luki Luck</span><span class="item-price">6.00€</span></li>
+          <p>Tortilla francesa, queso, doble de bacon,jamon york y mayo Yeski</p>
           <li><span class="item-name">Marinero</span><span class="item-price">5.50€</span></li>
+          <p>Atún, queso, lechuga, tomate y mayo Yeski</p>
         </ul>
-      </div> <!-- BURGERS -->
+      </div> 
+      <div class="menu-category">
+        <h3>Camperos Premium</h3>
+        <ul>
+          <li><span class="item-name">Emy 🌶️</span><span class="item-price">8.00€</span></li>
+          <p>Carne picada, queso cheddar, lechuga, tomate, mermelada de bacon y salsa Emy</p>
+          <li><span class="item-name">Desilachado</span><span class="item-price">8.50€</span></li>
+          <p>Cerdo desilachado a la barbacoa, jamón york, queso cheddar, lechuga, tomate, cebolla caramelizada y mayo Yeski</p>
+          <li><span class="item-name">Cora</span><span class="item-price">8.50€</span></li>
+          <p>Pollo, huevo, mermelada de bacon, queso de cabra, cebolla caramelizada y mayo Yeski</p>
+          <li><span class="item-name">Pimentuti</span><span class="item-price">7.50€</span></li>
+          <p>Pollo, queso cheddar, bacon, mermelada de pimiento, cebolla caramelizada y mayo Yeski</p>
+          <li><span class="item-name">Big Cora</span><span class="item-price">8.00€</span></li>
+          <p>Carne picada, queso chedar, bacon, lechuga, tomate, pepinillo y salsa big Cora</p>
+          <li><span class="item-name">Big Pollo</span><span class="item-price">7.50€</span></li>
+          <p>Pollo, queso chedar, bacon, lechuga, tomate, pepinillo y salsa big Cora</p>
+          <li><span class="item-name">Elegante</span><span class="item-price">8.50€</span></li>
+          <p>Solomillo, huevo, queso, cebolla caramelizada, pimientos fritos y mayo Yeski</p>
+        </ul>  
+      </div>
+      <!-- BURGERS -->
       <div class="menu-category">
         <h3>Burgers</h3>
         <ul>
           <li><span class="item-name">Clásica</span><span class="item-price">5.00€</span></li>
+          <p>Burguer, queso, lechuga, tomate, cebolla caramelizada, ketchup y mostaza</p>
           <li><span class="item-name">Potente</span><span class="item-price">6.50€</span></li>
+          <p>Burguer, queso, heuvo, bacon, lechuga, tomate, cebolla caramelizada, ketchup y mostaza</p>
           <li><span class="item-name">Cresta</span><span class="item-price">5.00€</span></li>
+          <p>Burguer aliñada, lechuga, tomate, cebolla a la plancha y mayo Yeski</p>
           <li><span class="item-name">Crestón</span><span class="item-price">6.50€</span></li>
+          <p>Burguer aliñada, queso, huevo, bacon, tomate, cebolla a la plancha y mayo Yeski</p>
           <li><span class="item-name">Crispy</span><span class="item-price">6.00€</span></li>
-          <li><span class="item-name">Pimientuti</span><span class="item-price">7.50€</span></li>
-          <li><span class="item-name">Big Cora</span><span class="item-price">8.00€</span></li>
-          <li><span class="item-name">Big Pollo</span><span class="item-price">7.50€</span></li>
-          <li><span class="item-name">Elegante</span><span class="item-price">8.50€</span></li>
+          <p>Pollo crujiente, queso, bacon, lechuga, tomate y mayo Yeski</p>
         </ul>
       </div> <!-- BURGERS PREMIUM -->
       <div class="menu-category">
         <h3>Burgers Premium</h3>
         <ul>
           <li><span class="item-name">Big Cora</span><span class="item-price">9.50€</span></li>
+          <p>Carne de vacuno, queso cheddar, bacon, tomate, lechuga, pepinillo y salsa big cora en pan potato Roll de juanito baker</p>
           <li><span class="item-name">Full Equip</span><span class="item-price">10.00€</span></li>
+          <p>Carne de vacuno, queso cheddar, bacon, huevo, cebolla caramelizada en pan de potato Roll de juanito baker</p>
           <li><span class="item-name">Cabramelizada</span><span class="item-price">9.50€</span></li>
+          <p>Carne de vacuno, queso de cabra, lechuga y cebolla caramelizada en pan de potato roll juanito baker</p>
           <li><span class="item-name">Desilachada</span><span class="item-price">10.00€</span></li>
+          Carne de vacuno, cerdo desilachado, queso cheddar, cebolla caramelizada, barbacoa y mayo Yeski en pan de potato roll juanito baker
+          <li><span class="item-name">Cora</span><span class="item-price">10.00€</span></li>
+          <p>Carne de vacuno, mermelada de bacon, huevo, queso de cabra,cebolla caramelizada y mayo Yeski en pan de potato roll juanito baker</p>
           <li><span class="item-name">Crispy Cora</span><span class="item-price">8.00€</span></li>
-          <li><span class="item-name">Pimientuti Premium</span><span class="item-price">10.00€</span></li>
+          <p>Pollo crujiente, queso cheddar, bacon mermelada de bacon y mostaza mayo en pan de juanito baker</p>
+          <li><span class="item-name">Pimientuti</span><span class="item-price">10.00€</span></li>
+          <p>Carne de vacuno, mermelada de pimiento, queso de cabra, bacon, cebolla caramelizada y salsa Emy en pan de potato roll de juanito baker </p>
         </ul>
       </div> <!-- BAGUETTES -->
       <div class="menu-category">
         <h3>Baguettes</h3>
         <ul>
           <li><span class="item-name">Serranito</span><span class="item-price">6.00€</span></li>
+          <p>Cerdo jamón serrano, pimiento, lechuga, tomate y mayo Yeski</p>
           <li><span class="item-name">Serrapollito</span><span class="item-price">6.50€</span></li>
+          <p>Pollo, jamon serrano, pimiento, tomate y mayo Yeski</p>
           <li><span class="item-name">Fofo’s</span><span class="item-price">6.50€</span></li>
+          <p>Cerdo aliñado, queos, bacon, lechuga, tomate, ymayo Yeski</p>
           <li><span class="item-name">Moruna</span><span class="item-price">6.00€</span></li>
+          <p>Pollo aliñado, queso, lechuga, tomate y mayo Yeski</p>
           <li><span class="item-name">Shawarma</span><span class="item-price">7.00€</span></li>
+          <p>Carne de pollo, bacon, queso, lechuga, tomate, cebolla, salsa blanca y un toque picante</p>
         </ul>
       </div> <!-- ENSALADAS -->
       <div class="menu-category">
         <h3>Ensaladas</h3>
         <ul>
           <li><span class="item-name">César</span><span class="item-price">6.00€</span></li>
+          <p>Lechuga iceberg, cebolla, tomate, picatostes, pollo sureño, salsa cesar y escamas de queso parmesano</p>
           <li><span class="item-name">Cabra</span><span class="item-price">7.00€</span></li>
+          <p>Mix de lechuga, tomate, frutos secos, queso de cabra, cebolla caramelizada y salsa mostaza y miel</p>
           <li><span class="item-name">Shawarma</span><span class="item-price">7.00€</span></li>
+          <p>Lechuga, tomate, cebolla, carne de pollo, salsa blanca y queso</p>
         </ul>
       </div> <!-- PERRITOS -->
       <div class="menu-category">
         <h3>Perritos</h3>
         <ul>
           <li><span class="item-name">Clásico</span><span class="item-price">3.50€</span></li>
+          Salchicha, queso, cebolla crunchy, kétchup y mostaza
           <li><span class="item-name">Súper</span><span class="item-price">4.50€</span></li>
+          <p>Salchicha, queso, mermelada de bacon, patata paja, ketchup y mostaza</p>
         </ul>
       </div>
     </section>
