--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   </section>
 
   <section class="mayo">
-    - MAYO YESKI -
-    Nuestra mayo-yeski es una salsa totalmente casera con una base de leche y un secreto que tiene más de 20 años.
+    <p>- MAYO YESKI - <br>
+    Nuestra mayo-yeski es una salsa totalmente casera con una base de leche y un secreto que tiene más de 20 años.</p>
   </section>
 
   
